SFDC Automation/src/objects/UVS_Bill_of_Sale__c.object
<CustomObject>
    <description>Bill of Sale for UVS</description>
    <fields>
        <fullName>ADDITIONAL_COST__c</fullName>
        <label>ADDITIONAL_COST</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COUNTRY_CODE__c</fullName>
        <label>COUNTRY_CODE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COUNTRY_NAME__c</fullName>
        <label>COUNTRY_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_NAME__c</fullName>
        <label>CUSTOMER_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_NUMBER__c</fullName>
        <label>CUSTOMER_NUMBER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISCOUNT__c</fullName>
        <label>DISCOUNT</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCATION_CODE__c</fullName>
        <label>LOCATION_CODE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEQ_BOS_ID__c</fullName>
        <externalId>true</externalId>
        <label>MEQ_BOS_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEQ_DISP_ID__c</fullName>
        <label>MEQ_DISP_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEQ_NUMBER__c</fullName>
        <label>MEQ_NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITYID__c</fullName>
        <label>OPPORTUNITY NUMBER</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPPORTUNITY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPPORTUNITY ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UVS_Bill_of_Sales</relationshipLabel>
        <relationshipName>UVS_Bill_of_Sales_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OWNER_REGION__c</fullName>
        <label>OWNER REGION</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESSED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PROCESSED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROCESS_COMMENT__c</fullName>
        <label>PROCESS COMMENT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SALES_AMOUNT__c</fullName>
        <label>SALES_AMOUNT</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALES_REP__c</fullName>
        <label>SALES_REP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALES_STATUS__c</fullName>
        <label>SALES_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOLD_LOCATION_CODE__c</fullName>
        <label>SOLD_LOCATION_CODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_UTC_Name__c</fullName>
        <description>Name of the UTC that sold the vehicle</description>
        <label>Sold UTC Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_COST_OF_SALE__c</fullName>
        <label>TOTAL_COST_OF_SALE</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRANSACTION_DATE__c</fullName>
        <label>TRANSACTION_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNIT_ID__c</fullName>
        <label>UNIT_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_NUMBER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UNIT NUMBER</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>UVS_Bill_of_Sales</relationshipLabel>
        <relationshipName>UVS_Bill_of_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VEHICLE_SOLD_DATE__c</fullName>
        <label>VEHICLE_SOLD_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WARRANTY_MILES__c</fullName>
        <label>WARRANTY_MILES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WARRANTY_TERM__c</fullName>
        <label>WARRANTY_TERM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bill of Sale</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>MEQ_BOS_ID__c</columns>
        <columns>SALES_REP__c</columns>
        <columns>SALES_STATUS__c</columns>
        <columns>SALES_AMOUNT__c</columns>
        <columns>LOCATION_CODE__c</columns>
        <columns>TOTAL_COST_OF_SALE__c</columns>
        <columns>VEHICLE_SOLD_DATE__c</columns>
        <columns>COUNTRY_NAME__c</columns>
        <columns>CUSTOMER_NAME__c</columns>
        <columns>OPPORTUNITYID__c</columns>
        <columns>SOLD_LOCATION_CODE__c</columns>
        <columns>TRANSACTION_DATE__c</columns>
        <columns>UNIT_NUMBER__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SALES_STATUS__c</field>
            <operation>equals</operation>
            <value>Straight Sale</value>
        </filters>
        <filters>
            <field>SALES_STATUS__c</field>
            <operation>equals</operation>
            <value>Trade</value>
        </filters>
        <filters>
            <field>SALES_STATUS__c</field>
            <operation>equals</operation>
            <value>Schedule &apos;A&apos; Sale</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BillOfSale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UVS_Bill_of_Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Opportunity_Number_cannot_be_changed</fullName>
        <active>true</active>
        <description>Opportunity No. can only change from: Nothing to something</description>
        <errorConditionFormula>PRIORVALUE(OPPORTUNITYID__c) &lt;&gt; &quot;&quot; 
&amp;&amp; ISCHANGED(OPPORTUNITYID__c)
&amp;&amp; ($Profile.Name&lt;&gt;  &apos;System Administrator&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;SSO System Administrator&apos;)  
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin&apos;) 
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin Non SSO&apos;)</errorConditionFormula>
        <errorMessage>Opportunity Number cannot be changed</errorMessage>
    </validationRules>
</CustomObject>